--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
-[[redirects]];
-from = "/proxy/*";
-to = "https://openapi.naver.com/:splat;
-status = 200;
-force = true;
+[[redirects]]
+from = "/proxy/*"
+to = "https://openapi.naver.com/:splat
+status = 200
+force = true
