--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "firebase": "^9.22.2",
     "http-proxy-middleware": "^2.0.6",
     "isomorphic-dompurify": "^1.6.0",
@@ -17,7 +18,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^6.11.2"
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.11.2",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
