--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.2",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "styled-components": "^6.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
